Tests/RunCMake/CMakePresets/MinimumRequiredInvalid-stderr.txt
^CMake Error: Could not read presets from [^
]*/Tests/RunCMake/CMakePresets/MinimumRequiredInvalid:
Error: @3,27: Invalid "cmakeMinimumRequired"
  "cmakeMinimumRequired": "3.18",
                          \^$
